force-app/main/default/objects/Track_Request__c/Track_Request__c.object-meta.xml
<CustomObject>
    <description>This object is created to send the request to track contacts.</description>
    <label>Track Request</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>TR_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Track Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>