force-app/main/default/objects/Track_Request__c/fields/Kanlet_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Kanlet_Configuration__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Kanlet Configuration</label>
    <referenceTo>Kanlet_License__c</referenceTo>
    <relationshipLabel>Track Requests</relationshipLabel>
    <relationshipName>Track_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>