force-app/main/default/objects/Track_Request__c/fields/No_of_Track_Request_Contacts__c.field-meta.xml
<CustomField>
    <fullName>No_of_Track_Request_Contacts__c</fullName>
    <description>This field is created to show the count of Track Request Contact.</description>
    <inlineHelpText>Indicates the count of Track Request Contact.</inlineHelpText>
    <label>No. of  Submitted Contacts</label>
    <summaryForeignKey>Track_Request_Contact__c.Track_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>