force-app/main/default/objects/Track_Request__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <inlineHelpText>This is request submitted date</inlineHelpText>
    <label>Track Request Date</label>
    <type>DateTime</type>
</CustomField>