force-app/main/default/objects/Track_Request__c/fields/Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Request_Status__c</fullName>
    <inlineHelpText>Status field indicates request current status</inlineHelpText>
    <label>Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Preparation</fullName>
                <default>true</default>
                <label>In Preparation</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
                <isActive>false</isActive>
                <label>Failed</label>
            </value>
            <value>
                <fullName>Succeeded</fullName>
                <isActive>false</isActive>
                <label>Succeeded</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>