force-app/main/default/objects/Track_Request__c/validationRules/Prevent_status_back.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_status_back</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(Request_Status__c), &quot;In Progress&quot;),
    ISPICKVAL(Request_Status__c, &quot;In Preparation&quot;)
)</errorConditionFormula>
    <errorDisplayField>Request_Status__c</errorDisplayField>
    <errorMessage>Status cannot revert back from  &apos;In Progress&apos; to &apos;In Preparation&apos;.</errorMessage>
</ValidationRule>