force-app/main/default/objects/Track_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Kanlet_Configuration__c</columns>
    <columns>Request_Status__c</columns>
    <columns>No_of_Track_Request_Contacts__c</columns>
    <columns>Request_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>