force-app/main/default/objects/Track_Request__c/listViews/Succeeded_Requests.listView-meta.xml
<ListView>
    <fullName>Succeeded_Requests</fullName>
    <columns>NAME</columns>
    <columns>Request_Date__c</columns>
    <columns>No_of_Track_Request_Contacts__c</columns>
    <columns>Request_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>Succeeded</value>
    </filters>
    <label>Succeeded Requests</label>
</ListView>